<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.mundiaurum.analysisapp.MAurumPackagesListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_packages_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment"
            />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.mundiaurum.analysisapp.MAurumItemDetailsFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_maurumitem_details">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ImageVierwerFragment"
            app:destination="@id/ImageViewerFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_VideoVierwerFragment"
            app:destination="@id/VideoViewerFragment" />
    </fragment>

    <fragment
        android:id="@+id/ImageViewerFragment"
        android:name="com.mundiaurum.analysisapp.ImageviewerFragment"
        android:label="@string/image_viewer_fragment"
        tools:layout="@layout/fragment_imageviewer">

        <action
            android:id="@+id/action_ImageViewerFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>

    <fragment
        android:id="@+id/VideoViewerFragment"
        android:name="com.mundiaurum.analysisapp.VideoViewerFragment"
        android:label="@string/video_viewer_fragment"
        tools:layout="@layout/fragment_imageviewer">

        <action
            android:id="@+id/action_VideoViewerFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
</navigation>